--- a/indecision-app/src/styles/components/_button.scss
+++ b/indecision-app/src/styles/components/_button.scss
@@ -6,7 +6,7 @@
     font-weight: bold;
     font-size: $l-size;
     width: 100%;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-size;
     padding: 2.4rem;
 }
 
@@ -35,4 +35,10 @@ button:disabled {
     border: none;
     color: $off-white;
     
+}
+
+@media (min-width: $desktop-breakpoint) {
+    .big-button {
+        margin-bottom: $xl-size;
+    }
 }
